[gd_scene load_steps=5 format=2]

[ext_resource path="res://Combat_Tutorial.gd" type="Script" id=1]
[ext_resource path="res://entities/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/mobs/Tutorial_Bandit.tscn" type="PackedScene" id=3]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 1.96045, 10.255, 1917.13, 4.41089, 1921.79, 1086.29, 0.0296631, 1081.75 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 1.96045, 10.255, 1917.13, 4.41089, 1921.79, 1086.29, 0.0296631, 1081.75 ) ]

[node name="Combat_Tutorial" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Tutorial_Bandit" parent="." instance=ExtResource( 3 )]

[node name="Navigation2D" type="Navigation2D" parent="."]
editor/display_folded = true

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 1 )

[node name="PlayerStartPosition" type="Position2D" parent="."]
position = Vector2( 252.2, 611.188 )

[node name="MobStartPosition" type="Position2D" parent="."]
position = Vector2( 1626.81, 633.909 )
